@@ -372,6 +372,9 @@ exited non-zero.
 convertpkg-compat32
 script cannot be found (where required).
 .RE
+.RS
+12: interrupt signal received.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
