@@ -7,6 +7,7 @@ sbotools
   * sbosnap: Redundant; replace with a compatibility symlink
   * Wrap variable-length onscreen messaging (that can't be piped), prompts and error messages at 72 characters
   * sboconfig: Use --reset to restore all default configuration values
+  * Build.pm: Remove temporary directory for tee in case of signal
 
 * 3.2.1 - 2024-12-20
   * Bugfix: sboinstall, sboupgrade GPG check for custom repositories (removed unneeded conditional)
